2015-01-06	Dominik Reichardt <dominus@users.sourceforge.net>
	* content/islefaq/*: fixed the island mod. Gave Colourless a ghost body, 
	  Nadir's schedule changed to patrol instead of pacing (we might have a 
	  bug there, he walked all over the map), fixed the position of the penguin 
	  statue, Amy's face will now properly show during the FAQ quest, and 
	  little usecode fixes.

2014-12-20	Dominik Reichardt <dominus@users.sourceforge.net>
	* shape_info.txt: Campfire (BG) and fire (SI) added to fire fields.
	* objs/egg.cc: Fields need to hurt any actor, not just the avatar/party.
	  Campfire (shape 825) frame 0 is burnt out and shouldn't cause damage. 
	  Testing with the original's item creator cheat revealed that the original 
	  seems to have confused frame 0 with frame 8.

2014-12-17	Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.*: The teleport cheat screen now supports hexadecimal coords
	  and is now finished.
	
2014-12-16	Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.*: The teleport cheat screen now supports geographic coords.

2014-12-13  jeff  <jeff@jeff-HP-Pavilion-dm4-Notebook-PC>

	* schedule.cc: Fix for bug 1891 - Desk schedule cleans up after itself now.

2014-12-11	Dominik Reichardt <dominus@users.sourceforge.net>
	* cheat_screen.*: Added display of geographic coordinates to the cheat screen.
	  Also begun work on the teleport cheat screen, teleport to dec coords and NPC
	  is working.

2014-11-20	Dominik Reichardt <dominus@users.sourceforge.net>
	* data/exultmsg.txt, shapes/items.h: added the subtitle texts of SI's end scene.
	  No idea how to actually display those when speech is disabled.

2014-11-17	Dominik Reichardt <dominus@users.sourceforge.net>
	* schedule.cc: temporarily fixed bug 1891 - the desk schedule was adding too 
	  many desk items to the NPCs inventory and never cleaned up, which was causing 
	  problems. For now only add 1 item - but maybe desk schedule needs to be 