@@ -1612,11 +1612,11 @@
 #		sleep field = 1
 #		poison field = 2
 #		caltrops = 3
+#		campfire = 4
 #
 #	Fire field
 #
 :561/0
-:825/0
 :895/0
 
 #	Sleep field
@@ -1630,6 +1630,9 @@
 #	Caltrops
 #
 :756/3
+
+#	Campfire
+:825/4
 %%endsection
 
 %%section frame_usecode
