@@ -1,3 +1,7 @@
+2015-01-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
+	* data/{bg,si}/shape_info.txt, mapedit/{exult_studio.glade,shapeedit.cc},
+	  objs/egg.*: Fixing bug #1896 "Campfires should hurt".
+
 2015-01-06	Dominik Reichardt <dominus@users.sourceforge.net>
 	* content/islefaq/*: fixed the island mod. Gave Colourless a ghost body, 
 	  Nadir's schedule changed to patrol instead of pacing (we might have a 
